--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -33,10 +33,16 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGrafos
 excludes=
+file.reference.gs-algo-1.3.jar=..\\..\\..\\..\\Downloads\\gs-algo-1.3\\gs-algo-1.3\\gs-algo-1.3.jar
+file.reference.gs-core-1.3.jar=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-ui-1.3.jar=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
-    ${libs.absolutelayout.classpath}
+    ${libs.absolutelayout.classpath}:\
+    ${file.reference.gs-ui-1.3.jar}:\
+    ${file.reference.gs-core-1.3.jar}:\
+    ${file.reference.gs-algo-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
