Archivos de texto - Guille (23/06)

--- a/ProyectoGrafos/nbproject/private/private.properties
+++ b/ProyectoGrafos/nbproject/private/private.properties
@@ -1,1 +1,1 @@
-user.properties.file=C:\\Users\\Luis Stanislao\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
+user.properties.file=/Users/sosag/Library/Application Support/NetBeans/11.3/build.properties
