--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -33,16 +33,28 @@ dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGrafos
 excludes=
+file.reference.Desktop-gs-algo-1.3=../../../Desktop/gs-algo-1.3
+file.reference.Desktop-gs-core-1.3=../../../Desktop/gs-core-1.3
+file.reference.Desktop-gs-ui-1.3=../../../Desktop/gs-ui-1.3
 file.reference.gs-algo-1.3.jar=..\\..\\..\\..\\Downloads\\gs-algo-1.3\\gs-algo-1.3\\gs-algo-1.3.jar
+file.reference.gs-algo-1.3.jar-1=../../../Desktop/gs-algo-1.3.jar
 file.reference.gs-core-1.3.jar=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-core-1.3.jar-1=../../../Desktop/gs-core-1.3.jar
 file.reference.gs-ui-1.3.jar=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
+file.reference.gs-ui-1.3.jar-1=../../../Desktop/gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.gs-ui-1.3.jar}:\
     ${file.reference.gs-core-1.3.jar}:\
-    ${file.reference.gs-algo-1.3.jar}
+    ${file.reference.gs-algo-1.3.jar}:\
+    ${file.reference.Desktop-gs-algo-1.3}:\
+    ${file.reference.Desktop-gs-core-1.3}:\
+    ${file.reference.Desktop-gs-ui-1.3}:\
+    ${file.reference.gs-algo-1.3.jar-1}:\
+    ${file.reference.gs-core-1.3.jar-1}:\
+    ${file.reference.gs-ui-1.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
