--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -38,10 +38,13 @@ file.reference.Desktop-gs-core-1.3=../../../Desktop/gs-core-1.3
 file.reference.Desktop-gs-ui-1.3=../../../Desktop/gs-ui-1.3
 file.reference.gs-algo-1.3.jar=..\\..\\..\\..\\Downloads\\gs-algo-1.3\\gs-algo-1.3\\gs-algo-1.3.jar
 file.reference.gs-algo-1.3.jar-1=../../../Desktop/gs-algo-1.3.jar
+file.reference.gs-algo-1.3.jar-2=..\\..\\..\\..\\Downloads\\gs-algo-1.3\\gs-algo-1.3\\gs-algo-1.3.jar
 file.reference.gs-core-1.3.jar=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
 file.reference.gs-core-1.3.jar-1=../../../Desktop/gs-core-1.3.jar
+file.reference.gs-core-1.3.jar-2=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
 file.reference.gs-ui-1.3.jar=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
 file.reference.gs-ui-1.3.jar-1=../../../Desktop/gs-ui-1.3.jar
+file.reference.gs-ui-1.3.jar-2=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -54,7 +57,10 @@ javac.classpath=\
     ${file.reference.Desktop-gs-ui-1.3}:\
     ${file.reference.gs-algo-1.3.jar-1}:\
     ${file.reference.gs-core-1.3.jar-1}:\
-    ${file.reference.gs-ui-1.3.jar-1}
+    ${file.reference.gs-ui-1.3.jar-1}:\
+    ${file.reference.gs-algo-1.3.jar-2}:\
+    ${file.reference.gs-core-1.3.jar-2}:\
+    ${file.reference.gs-ui-1.3.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
