--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -1,9 +1,10 @@
 annotation.processing.enabled=true
 annotation.processing.enabled.in.editor=false
-annotation.processing.processor.options=
 annotation.processing.processors.list=
 annotation.processing.run.all.processors=true
 annotation.processing.source.output=${build.generated.sources.dir}/ap-source-output
+application.title=ProyectoGrafos
+application.vendor=Luis Stanislao
 build.classes.dir=${build.dir}/classes
 build.classes.excludes=**/*.java,**/*.form
 # This directory is removed when the project is cleaned:
@@ -32,35 +33,18 @@ dist.jar=${dist.dir}/ProyectoGrafos.jar
 dist.javadoc.dir=${dist.dir}/javadoc
 dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGrafos
+endorsed.classpath=
 excludes=
-file.reference.Desktop-gs-algo-1.3=../../../Desktop/gs-algo-1.3
-file.reference.Desktop-gs-core-1.3=../../../Desktop/gs-core-1.3
-file.reference.Desktop-gs-ui-1.3=../../../Desktop/gs-ui-1.3
-file.reference.gs-algo-1.3.jar=..\\..\\..\\..\\Downloads\\gs-algo-1.3\\gs-algo-1.3\\gs-algo-1.3.jar
-file.reference.gs-algo-1.3.jar-1=../../../Desktop/gs-algo-1.3.jar
-file.reference.gs-algo-1.3.jar-2=..\\..\\..\\..\\Downloads\\gs-algo-1.3\\gs-algo-1.3\\gs-algo-1.3.jar
-file.reference.gs-core-1.3.jar=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
-file.reference.gs-core-1.3.jar-1=../../../Desktop/gs-core-1.3.jar
-file.reference.gs-core-1.3.jar-2=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
-file.reference.gs-ui-1.3.jar=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
-file.reference.gs-ui-1.3.jar-1=../../../Desktop/gs-ui-1.3.jar
-file.reference.gs-ui-1.3.jar-2=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
+file.reference.gs-algo-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-algo-1.3\\gs-algo-1.3.jar
+file.reference.gs-core-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-ui-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-ui-1.3\\gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.gs-ui-1.3.jar}:\
     ${file.reference.gs-core-1.3.jar}:\
-    ${file.reference.gs-algo-1.3.jar}:\
-    ${file.reference.Desktop-gs-algo-1.3}:\
-    ${file.reference.Desktop-gs-core-1.3}:\
-    ${file.reference.Desktop-gs-ui-1.3}:\
-    ${file.reference.gs-algo-1.3.jar-1}:\
-    ${file.reference.gs-core-1.3.jar-1}:\
-    ${file.reference.gs-ui-1.3.jar-1}:\
-    ${file.reference.gs-algo-1.3.jar-2}:\
-    ${file.reference.gs-core-1.3.jar-2}:\
-    ${file.reference.gs-ui-1.3.jar-2}
+    ${file.reference.gs-algo-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
