--- a/ProyectoGrafos/nbproject/private/private.properties
+++ b/ProyectoGrafos/nbproject/private/private.properties
@@ -1,4 +1,8 @@
-file.reference.gs-algo-1.3.jar=/Users/sosag/Desktop/gs-ui-1.3
-file.reference.gs-core-1.3.jar=/Users/sosag/Desktop/gs-core-1.3
-file.reference.gs-ui-1.3.jar=/Users/sosag/Desktop/gs-algo-1.3
-user.properties.file=/Users/sosag/Library/Application Support/NetBeans/11.3/build.properties
+compile.on.save=false
+do.depend=false
+do.jar=true
+do.jlink=false
+javac.debug=true
+javadoc.preview=true
+jlink.strip=false
+user.properties.file=C:\\Users\\Luis Stanislao\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
