--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -37,14 +37,18 @@ endorsed.classpath=
 excludes=
 file.reference.gs-algo-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-algo-1.3\\gs-algo-1.3.jar
 file.reference.gs-core-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-core-1.3.jar-1=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
 file.reference.gs-ui-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-ui-1.3\\gs-ui-1.3.jar
+file.reference.gs-ui-1.3.jar-1=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
     ${file.reference.gs-ui-1.3.jar}:\
     ${file.reference.gs-core-1.3.jar}:\
-    ${file.reference.gs-algo-1.3.jar}
+    ${file.reference.gs-algo-1.3.jar}:\
+    ${file.reference.gs-ui-1.3.jar-1}:\
+    ${file.reference.gs-core-1.3.jar-1}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
