--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -36,10 +36,13 @@ dist.jlink.output=${dist.jlink.dir}/ProyectoGrafos
 endorsed.classpath=
 excludes=
 file.reference.gs-algo-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-algo-1.3\\gs-algo-1.3.jar
+file.reference.gs-algo-1.3.jar-1=../../../Desktop/gs-algo-1.3.jar
 file.reference.gs-core-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-core-1.3\\gs-core-1.3.jar
 file.reference.gs-core-1.3.jar-1=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-core-1.3.jar-2=../../../Desktop/gs-core-1.3.jar
 file.reference.gs-ui-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-ui-1.3\\gs-ui-1.3.jar
 file.reference.gs-ui-1.3.jar-1=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
+file.reference.gs-ui-1.3.jar-2=../../../Desktop/gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
@@ -48,7 +51,10 @@ javac.classpath=\
     ${file.reference.gs-core-1.3.jar}:\
     ${file.reference.gs-algo-1.3.jar}:\
     ${file.reference.gs-ui-1.3.jar-1}:\
-    ${file.reference.gs-core-1.3.jar-1}
+    ${file.reference.gs-core-1.3.jar-1}:\
+    ${file.reference.gs-algo-1.3.jar-1}:\
+    ${file.reference.gs-core-1.3.jar-2}:\
+    ${file.reference.gs-ui-1.3.jar-2}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
