--- a/ProyectoGrafos/nbproject/project.properties
+++ b/ProyectoGrafos/nbproject/project.properties
@@ -35,26 +35,19 @@ dist.jlink.dir=${dist.dir}/jlink
 dist.jlink.output=${dist.jlink.dir}/ProyectoGrafos
 endorsed.classpath=
 excludes=
-file.reference.gs-algo-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-algo-1.3\\gs-algo-1.3.jar
+file.reference.gs-algo-1.3.jar=gs-algo-1.3\\gs-algo-1.3.jar
 file.reference.gs-algo-1.3.jar-1=../../../Desktop/gs-algo-1.3.jar
-file.reference.gs-core-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-core-1.3\\gs-core-1.3.jar
-file.reference.gs-core-1.3.jar-1=..\\..\\..\\..\\Downloads\\gs-core-1.3\\gs-core-1.3\\gs-core-1.3.jar
+file.reference.gs-core-1.3.jar=gs-core-1.3\\gs-core-1.3.jar
 file.reference.gs-core-1.3.jar-2=../../../Desktop/gs-core-1.3.jar
-file.reference.gs-ui-1.3.jar=C:\\Users\\Luis Stanislao\\Downloads\\gs-ui-1.3\\gs-ui-1.3.jar
-file.reference.gs-ui-1.3.jar-1=..\\..\\..\\..\\Downloads\\gs-ui-1.3\\gs-ui-1.3\\gs-ui-1.3.jar
+file.reference.gs-ui-1.3.jar=gs-ui-1.3\\gs-ui-1.3.jar
 file.reference.gs-ui-1.3.jar-2=../../../Desktop/gs-ui-1.3.jar
 includes=**
 jar.compress=false
 javac.classpath=\
     ${libs.absolutelayout.classpath}:\
-    ${file.reference.gs-ui-1.3.jar}:\
     ${file.reference.gs-core-1.3.jar}:\
-    ${file.reference.gs-algo-1.3.jar}:\
-    ${file.reference.gs-ui-1.3.jar-1}:\
-    ${file.reference.gs-core-1.3.jar-1}:\
-    ${file.reference.gs-algo-1.3.jar-1}:\
-    ${file.reference.gs-core-1.3.jar-2}:\
-    ${file.reference.gs-ui-1.3.jar-2}
+    ${file.reference.gs-ui-1.3.jar}:\
+    ${file.reference.gs-algo-1.3.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.deprecation=false
