--- a/ProyectoGrafos/nbproject/private/private.properties
+++ b/ProyectoGrafos/nbproject/private/private.properties
@@ -5,4 +5,4 @@ do.jlink=false
 javac.debug=true
 javadoc.preview=true
 jlink.strip=false
-user.properties.file=/Users/sosag/Library/Application Support/NetBeans/11.3/build.properties
+user.properties.file=C:\\Users\\Luis Stanislao\\AppData\\Roaming\\NetBeans\\11.0\\build.properties
